2007-06-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-mode.el (haskell-mode-map): Remove C-c C-r binding.

	* inf-haskell.el (inferior-haskell-load-file): Remove reload arg.
	(inferior-haskell-reload-file): Remove.

2007-06-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-compute-module-alist): Fix regexps.
	(inferior-haskell-module-alist-file): Thinko.

	* inf-haskell.el (inferior-haskell-run-command): New var.
	(inferior-haskell-load-and-run): New command.

	* inf-haskell.el (inferior-haskell-map-internal-ghc-ident): New var.
	(inferior-haskell-map-internal-ghc-ident): New fun.
	(inferior-haskell-find-haddock): Use it.

	* inf-haskell.el (inferior-haskell-module-alist-file): Use a file in
	/tmp rather than ~/ by default.
	(inferior-haskell-compute-module-alist):
	Rename from inferior-haskell-populate-module-alist.
	Just return the result without saving it in any cache.
	(inferior-haskell-read-module-alist-cache): Delete.
	(inferior-haskell-module-alist): New function which replaces it, taking
	care of the caching (both store&read).
	(inferior-haskell-find-haddock): Adjust to this new arrangement.

2007-06-29  David House  <dmhouse@gmail.com>

	* haskell-mode.el (haskell-mode-map): Add binding to the new
	inferior-haskell-find-haddock command.

2007-06-29  David House  <dmhouse@gmail.com>

	* inf-haskell.el (inferior-haskell-module-alist-file)
	(inferior-haskell-module-re, inferior-haskell-use-web-docs)
	(inferior-haskell-web-docs-base, haskell-package-manager-name)
	(haskell-package-conf-file, inferior-haskell-module-alist): New vars.
	(inferior-haskell-get-module, inferior-haskell-query-ghc-pkg)
	(inferior-haskell-get-package-list)
	(inferior-haskell-populate-module-alist)
	(inferior-haskell-read-module-alist-cache)
	(inferior-haskell-find-haddock): New functions to lookup Haddock docs.

2007-06-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-type, inferior-haskell-info)